clang/test/BSC/Negative/Ownership/Borrow/borrow_check_rules/borrow_field_of_struct/borrow_field_of_struct.cbs
// RUN: %clang_cc1 -verify %s
void use(int *borrow p) {}

typedef struct G {
    int a;
} G;

void test1() {
    G g;
    G * pg = &g;
    int * borrow p1 = &mut g.a; // expected-note {{previous borrow is here}}
    int * borrow p2 = &mut pg->a; // expected-note {{previous borrow is here}}
    g.a = 5; // expected-error {{Can not modify 'g.a' because be borrowed}}
    pg->a = 5;  // expected-error {{Can not modify 'pg.a' because be borrowed}}
    use(p1);
    use(p2); 
}

struct S {
  G g;
};
struct K {
  G* g;
};

void test2() {
    struct S s1;
    struct S *s = &s1;
    int *borrow p1 = &mut s->g.a; // expected-note {{previous borrow is here}}
    int *borrow p2 = &mut s1.g.a; // expected-note {{previous borrow is here}}
    s->g.a = 5;    // expected-error {{Can not modify 's.g.a' because be borrowed}}
    s1.g.a = 5;    // expected-error {{Can not modify 's1.g.a' because be borrowed}}
    use(p1);
    use(p2);

    struct K k1;
    struct K *k = &k1;
    int *borrow q1 = &mut k->g->a; // expected-note {{previous borrow is here}}
    int *borrow q2 = &mut k1.g->a; // expected-note {{previous borrow is here}}
    k->g->a = 5; // expected-error {{Can not modify 'k.g.a' because be borrowed}}
    k1.g->a = 5; // expected-error {{Can not modify 'k1.g.a' because be borrowed}}
    use(q1);
    use(q2);    
}

struct M {
    struct S *borrow ps;
    struct K *borrow pk;
};
void useM(struct M m) {};
void test3() {
    struct S s1; 
    struct K k1;
    struct M m = { .ps = &mut s1, .pk = &mut k1 };   // expected-note {{previous borrow is here}} expected-note {{previous borrow is here}}
    s1.g.a = 5;    // expected-error {{Can not modify 's1.g.a' because be borrowed}}
    k1.g->a = 5;   // expected-error {{Can not modify 'k1.g.a' because be borrowed}}
    useM(m);
}